--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="sidebar">
       <!-- =====================
       Add elements in this space-->
-      <button id='previous' class="button">Back</button> 
-      <button id="next" class="button">Next</button>
+      <button id='previous' class="button">Back!</button> 
+      <button id="next" class="button">Next!</button>
       <!--====================== -->
     </div>
     <!-- Map -->
