--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Evan Cernea - Welcome to My Page</title>
+    <title>Jiazuo Zhang - Projects</title>
     <link rel="icon" type="image/png" href="img/logos_small-logo.png" sizes="16x16">
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
