--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="footer">
         <ul class="footer-bar" role="footer">
             <li class="social-media">
-                <a href="https://github.com/ecernea">
+                <a href="https://https://github.com/ToadHa">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -131,7 +131,7 @@
                 </a>
             </li>
             <li class="social-media">
-                <a href="https://www.linkedin.com/in/evan-cernea-74602396/">
+                <a href="https://www.linkedin.com/in/jiazuozhang/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -139,7 +139,7 @@
                 </a>
             </li>
             <li class="social-media">
-                <a href="mailto:evan.cernea@gmail.com">
+                <a href="mailto:jiazuozhang@icloud.com">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
