--- a/index.html
+++ b/index.html
@@ -14,9 +14,31 @@
     <link href="css/style.css" rel="stylesheet">
     <script src="js/main.js"></script>
     <script src="vendor/jquery.min.js"></script>
+    
+</head>
+<title>Jiazuo Zhang - Projects</title>
 </head>
 
 <body>
+    <div class="head-wrapper">
+        <div class="header">
+            <a href="index.html">
+            </a>
+        </div>
+        <div class="navbar">
+            <ul class="navbar-pages" role="navigation">
+                <li class="pagebutt">
+                    <a class="pagelink" href="index.html">PORTFOLIO</a>
+                </li>
+                <li class="pagebutt">
+                    <a class="pagelink" href="resume.html">RESUME</a>
+                </li>
+                <li class="pagebutt">
+                    <a class="pagelink" href="about.html"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
    
 
 </body></html>
