--- a/index.html
+++ b/index.html
@@ -40,5 +40,5 @@
         </div>
     </div>
    
-
+<p>This map shows gun violence records of Philadelpia from 2015. Click the points to see more information.</p>
 </body></html>
