--- a/index.html
+++ b/index.html
@@ -40,5 +40,19 @@
         </div>
     </div>
    
-<p>This map shows gun violence records of Philadelpia from 2015. Click the points to see more information.</p>
+<p>## Predicting Heroin Overdoses in Cincinnati, Ohio
+the webpage is published at:
+https://toadha.github.io/Project2_ver3.html
+
+## Predicting Housing Price in Nashville, Tennessee
+the webpage is published at:
+https://toadha.github.io/Midterm_MUSA507_Sagari%26Jiazuo.html
+
+## MUSA 611 Midterm Project: Hotels in Miami
+the webpage is published at:
+https://toadha.github.io/cpln692-week7-midterm/assignment/index.html
+
+## MUSA 611 Final Project: Philadelphia Gunshot Map
+the webpage is published at:
+https://toadha.github.io/692_final/index.html</p>
 </body></html>
