--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Karla|Oswald|Francois+One|Open+Sans" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
-    <script src="js/main.js"></script>
-    <script src="vendor/jquery.min.js"></script>
+    <link href="style.css" rel="stylesheet">
+    <!--script src="js/main.js"></script>
+    <!--script src="vendor/jquery.min.js"></script>
     
 </head>
 <title>Jiazuo Zhang - Projects</title>
