--- a/index.html
+++ b/index.html
@@ -27,20 +27,13 @@
         <!-- Main Content -->
         <div class="main-content">
             <section>
-                <h2>Academic Projects</h2>
+                <h2>Projects</h2>
 
                 <div class="project">
                     <a href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
                         <h3>Online Learning Management Web Application</h3>
                     </a>
                     <img src="https://JZZhang04.github.io/7.png" alt="Online Learning Management Web Application">
-                </div>
-
-                <div class="project">
-                    <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
-                        <h3>Handwritten Digits Recognition using Neural Network</h3>
-                    </a>
-                    <img src="https://JZZhang04.github.io/6.png" alt="Handwritten Digits Recognition">
                 </div>
 
                 <div class="project">
@@ -55,6 +48,27 @@
                         <h3>Predicting Heroin Overdoses in Cincinnati, Ohio</h3>
                     </a>
                     <img src="https://JZZhang04.github.io/1.png" alt="Predicting Heroin Overdoses">
+                </div>
+
+                <div class="project">
+                    <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                        <h3>Handwritten Digits Recognition using Neural Network</h3>
+                    </a>
+                    <img src="https://JZZhang04.github.io/6.png" alt="Handwritten Digits Recognition">
+                </div>
+
+                <div class="project">
+                    <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                        <h3>Hotels of Miami</h3>
+                    </a>
+                    <img src="https://JZZhang04.github.io/3.png" alt="Hotels of Miami">
+                </div>
+
+                <div class="project">
+                    <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                        <h3>Philadelphia Gunshot Map</h3>
+                    </a>
+                    <img src="https://JZZhang04.github.io/4.png" alt="Philadelphia Gunshot">
                 </div>
 
                 <!-- Add more projects as needed -->
