--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <div class="sidebar">
             <h1>Jiazuo Zhang</h1>
             <p>Master of Computer Science <br>Northeastern University (2024-2026)</p>
-            <p>Email: <a href="mailto:jiazuozhang@icloud.com">jiazuozhang@icloud.com</a></p>
+            <p>
+                <i class="fas fa-envelope"></i> 
+                <a href="mailto:jiazuozhang@icloud.com">jiazuozhang@icloud.com</a>
+            </p>
             <div class="contact-icons">
                 <a href="https://www.linkedin.com/in/jiazuozhang" target="_blank">
                     <i class="fab fa-linkedin"></i> LinkedIn
@@ -26,52 +29,72 @@
 
         <!-- Main Content -->
         <div class="main-content">
+            <!-- Education Section -->
+            <section>
+                <h2>Education</h2>
+                <div class="education">
+                    <h3>Northeastern University</h3>
+                    <p>Master of Science in Computer Science 2024 - 2026</p>
+                    <h3>University of Pennsylvania</h3>
+                    <p>Master of Urban Spatial Analytics 2018 - 2019</p>
+                    <h3>Beijing Forestry University</h3>
+                    <p>Bachelor of Engineering 2013 - 2018</p>
+                </div>
+            </section>
+
+            <!-- Projects Section -->
             <section>
                 <h2>Projects</h2>
-
-                <div class="project">
-                    <a href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
+                <div class="projects-grid">
+                    <div class="project">
                         <h3>Online Learning Management Web Application</h3>
-                    </a>
-                    <img src="https://JZZhang04.github.io/7.png" alt="Online Learning Management Web Application">
-                </div>
-
-                <div class="project">
-                    <a href="https://JZZhang04.github.io/620final.html" target="_blank">
-                        <h3>Heroin Overdose Analysis of Cincinnati, Ohio</h3>
-                    </a>
-                    <img src="https://JZZhang04.github.io/5.png" alt="Heroin Overdose Analysis">
-                </div>
-
-                <div class="project">
-                    <a href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
-                        <h3>Predicting Heroin Overdoses in Cincinnati, Ohio</h3>
-                    </a>
-                    <img src="https://JZZhang04.github.io/1.png" alt="Predicting Heroin Overdoses">
-                </div>
-
-                <div class="project">
-                    <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
-                        <h3>Handwritten Digits Recognition using Neural Network</h3>
-                    </a>
-                    <img src="https://JZZhang04.github.io/6.png" alt="Handwritten Digits Recognition">
-                </div>
-
-                <div class="project">
-                    <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                        <p>
+                            <a href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
+                        <h3>Heroin Overdose Analysis</h3>
+                        <p>
+                            <a href="https://JZZhang04.github.io/620final.html" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
+                        <h3>Predicting Heroin Overdoses</h3>
+                        <p>
+                            <a href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
+                        <h3>Handwritten Digits Recognition</h3>
+                        <p>
+                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
                         <h3>Hotels of Miami</h3>
-                    </a>
-                    <img src="https://JZZhang04.github.io/3.png" alt="Hotels of Miami">
-                </div>
-
-                <div class="project">
-                    <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                        <p>
+                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
                         <h3>Philadelphia Gunshot Map</h3>
-                    </a>
-                    <img src="https://JZZhang04.github.io/4.png" alt="Philadelphia Gunshot">
+                        <p>
+                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
                 </div>
-
-                <!-- Add more projects as needed -->
             </section>
         </div>
     </div>
