--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="projects-grid">
                     <div class="project">
                         <h3>Online Learning Management Web Application</h3>
+                        <img src="project1.jpg" alt="Project 1" />
                         <p>
                             <a href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
                                 View Project
@@ -56,6 +57,7 @@
                     </div>
                     <div class="project">
                         <h3>Heroin Overdose Analysis</h3>
+                        <img src="project2.jpg" alt="Project 2" />
                         <p>
                             <a href="https://JZZhang04.github.io/620final.html" target="_blank">
                                 View Project
@@ -64,6 +66,7 @@
                     </div>
                     <div class="project">
                         <h3>Predicting Heroin Overdoses</h3>
+                        <img src="project3.jpg" alt="Project 3" />
                         <p>
                             <a href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
                                 View Project
@@ -72,6 +75,7 @@
                     </div>
                     <div class="project">
                         <h3>Handwritten Digits Recognition</h3>
+                        <img src="project4.jpg" alt="Project 4" />
                         <p>
                             <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
                                 View Project
@@ -80,6 +84,7 @@
                     </div>
                     <div class="project">
                         <h3>Hotels of Miami</h3>
+                        <img src="project5.jpg" alt="Project 5" />
                         <p>
                             <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
                                 View Project
@@ -88,6 +93,7 @@
                     </div>
                     <div class="project">
                         <h3>Philadelphia Gunshot Map</h3>
+                        <img src="project6.jpg" alt="Project 6" />
                         <p>
                             <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
                                 View Project
