--- a/index.html
+++ b/index.html
@@ -6,6 +6,59 @@
     <title>Jiazuo Zhang</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* General Layout */
+        .container {
+            display: flex;
+        }
+        /* Sidebar Styling */
+        .sidebar {
+            width: 30%; /* Increased width */
+            background-color: #f4f4f4;
+            padding: 20px;
+        }
+        .sidebar h1 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        .sidebar p {
+            margin-bottom: 15px;
+        }
+        .contact-icons a {
+            display: block;
+            margin-bottom: 10px;
+            color: #000;
+            text-decoration: none;
+        }
+        .contact-icons i {
+            margin-right: 8px;
+        }
+        /* Main Content Styling */
+        .main-content {
+            width: 70%;
+            padding: 20px;
+        }
+        .main-content section {
+            margin-bottom: 30px;
+        }
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+        }
+        .project img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .project h3 {
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+        .project p {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -42,13 +95,22 @@
                 </div>
             </section>
 
+            <!-- Professional Skills Section -->
+            <section>
+                <h2>Professional Skills</h2>
+                <p><strong>Languages:</strong> Python, Java, JavaScript, TypeScript, HTML, CSS, R</p>
+                <p><strong>Frameworks & Libraries:</strong> React, Angular, Bootstrap, Leaflet, pandas</p>
+                <p><strong>Developer Tools:</strong> Git, Visual Studio Code, IntelliJ, Jupyter Notebook, MySQL Workbench, MongoDB</p>
+                <p><strong>Domain Knowledge:</strong> Object-Oriented Programming, Data Structures & Algorithms, Web Development</p>
+            </section>
+
             <!-- Projects Section -->
             <section>
                 <h2>Projects</h2>
                 <div class="projects-grid">
                     <div class="project">
                         <h3>Online Learning Management Web Application</h3>
-                        <img src="project1.jpg" alt="Project 1" />
+                        <img src="7.png" alt="Project 1" />
                         <p>
                             <a href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
                                 View Project
@@ -57,7 +119,7 @@
                     </div>
                     <div class="project">
                         <h3>Heroin Overdose Analysis</h3>
-                        <img src="project2.jpg" alt="Project 2" />
+                        <img src="5.png" alt="Project 2" />
                         <p>
                             <a href="https://JZZhang04.github.io/620final.html" target="_blank">
                                 View Project
@@ -66,7 +128,7 @@
                     </div>
                     <div class="project">
                         <h3>Predicting Heroin Overdoses</h3>
-                        <img src="project3.jpg" alt="Project 3" />
+                        <img src="1.png" alt="Project 3" />
                         <p>
                             <a href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
                                 View Project
@@ -75,7 +137,7 @@
                     </div>
                     <div class="project">
                         <h3>Handwritten Digits Recognition</h3>
-                        <img src="project4.jpg" alt="Project 4" />
+                        <img src="6.png" alt="Project 4" />
                         <p>
                             <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
                                 View Project
@@ -84,7 +146,7 @@
                     </div>
                     <div class="project">
                         <h3>Hotels of Miami</h3>
-                        <img src="project5.jpg" alt="Project 5" />
+                        <img src="3.png" alt="Project 5" />
                         <p>
                             <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
                                 View Project
@@ -93,7 +155,7 @@
                     </div>
                     <div class="project">
                         <h3>Philadelphia Gunshot Map</h3>
-                        <img src="project6.jpg" alt="Project 6" />
+                        <img src="4.png" alt="Project 6" />
                         <p>
                             <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
                                 View Project
