--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <div class="sidebar">
                 <h1>Jiazuo Zhang</h1>
                 <p>Master of Computer Science <br>Northeastern University (2024-2026)</p>
-                <p>
-                    <i class="fas fa-envelope"></i> 
-                    <a href="mailto:jiazuozhang@icloud.com">jiazuozhang@icloud.com</a>
-                </p>
-                <div class="contact-icons">
+                <!-- Email and Social Links in the Same Row -->
+                <div class="contact-row">
+                    <a href="mailto:jiazuozhang04@gmail.com">
+                        <i class="fas fa-envelope"></i> email
+                    </a>
                     <a href="https://www.linkedin.com/in/jiazuozhang" target="_blank">
                         <i class="fab fa-linkedin"></i> LinkedIn
                     </a>
@@ -63,26 +63,7 @@
                             <h3>Online Learning Management Web Application</h3>
                             <img src="7.png" alt="Project 1" />
                         </a>
-                        <a class="project" href="https://JZZhang04.github.io/620final.html" target="_blank">
-                            <h3>Heroin Overdose Analysis</h3>
-                            <img src="5.png" alt="Project 2" />
-                        </a>
-                        <a class="project" href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
-                            <h3>Predicting Heroin Overdoses</h3>
-                            <img src="1.png" alt="Project 3" />
-                        </a>
-                        <a class="project" href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
-                            <h3>Handwritten Digits Recognition</h3>
-                            <img src="6.png" alt="Project 4" />
-                        </a>
-                        <a class="project" href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
-                            <h3>Hotels of Miami</h3>
-                            <img src="3.png" alt="Project 5" />
-                        </a>
-                        <a class="project" href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
-                            <h3>Philadelphia Gunshot Map</h3>
-                            <img src="4.png" alt="Project 6" />
-                        </a>
+                        <!-- Add other projects here -->
                     </div>
                 </section>
             </div>
