--- a/index.html
+++ b/index.html
@@ -55,18 +55,66 @@
                     </ul>
                 </section>
 
-                <!-- Projects Section -->
-                <section>
-                    <h2>Projects</h2>
-                    <div class="projects-grid">
-                        <a class="project" href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
-                            <h3>Online Learning Management Web Application</h3>
-                            <img src="7.png" alt="Project 1" />
-                        </a>
-                        <!-- Add other projects here -->
+            <!-- Projects Section -->
+            <section>
+                <h2>Projects</h2>
+                <div class="projects-grid">
+                    <div class="project">
+                        <h3>Online Learning Management Web Application</h3>
+                        <img src="7.png" alt="Project 1" />
+                        <p>
+                            <a href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
+                                View Project
+                            </a>
+                        </p>
                     </div>
-                </section>
-            </div>
+                    <div class="project">
+                        <h3>Heroin Overdose Analysis</h3>
+                        <img src="5.png" alt="Project 2" />
+                        <p>
+                            <a href="https://JZZhang04.github.io/620final.html" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
+                        <h3>Predicting Heroin Overdoses</h3>
+                        <img src="1.png" alt="Project 3" />
+                        <p>
+                            <a href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
+                        <h3>Handwritten Digits Recognition</h3>
+                        <img src="6.png" alt="Project 4" />
+                        <p>
+                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
+                        <h3>Hotels of Miami</h3>
+                        <img src="3.png" alt="Project 5" />
+                        <p>
+                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                    <div class="project">
+                        <h3>Philadelphia Gunshot Map</h3>
+                        <img src="4.png" alt="Project 6" />
+                        <p>
+                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                                View Project
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 </body>
