--- a/index.html
+++ b/index.html
@@ -6,6 +6,90 @@
     <title>Jiazuo Zhang</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .outer-container {
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+
+        .container {
+            display: flex;
+            width: 90%;
+            max-width: 1200px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .sidebar {
+            background-color: #ffffff;
+            padding: 20px;
+            width: 25%;
+            border-right: 1px solid #ddd;
+        }
+
+        .main-content {
+            padding: 20px;
+            width: 75%;
+        }
+
+        .contact-icons {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .contact-icons a {
+            text-decoration: none;
+            color: #0073b1;
+            display: flex;
+            align-items: center;
+        }
+
+        .contact-icons a i {
+            margin-right: 5px;
+        }
+
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 20px;
+        }
+
+        .project {
+            text-decoration: none;
+            color: #333;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            overflow: hidden;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+
+        .project:hover {
+            transform: scale(1.02);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .project img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+        }
+
+        .project h3 {
+            margin: 0;
+            padding: 10px;
+            background-color: #f5f5f5;
+            font-size: 16px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <div class="outer-container">
@@ -15,10 +99,9 @@
             <div class="sidebar">
                 <h1>Jiazuo Zhang</h1>
                 <p>Master of Computer Science <br>Northeastern University (2024-2026)</p>
-                <!-- Email and Social Links in the Same Row -->
-                <div class="contact-row">
+                <div class="contact-icons">
                     <a href="mailto:jiazuozhang04@gmail.com">
-                        <i class="fas fa-envelope"></i> email
+                        <i class="fas fa-envelope"></i> Email
                     </a>
                     <a href="https://www.linkedin.com/in/jiazuozhang" target="_blank">
                         <i class="fab fa-linkedin"></i> LinkedIn
@@ -55,66 +138,37 @@
                     </ul>
                 </section>
 
-            <!-- Projects Section -->
-            <section>
-                <h2>Projects</h2>
-                <div class="projects-grid">
-                    <div class="project">
-                        <h3>Online Learning Management Web Application</h3>
-                        <img src="7.png" alt="Project 1" />
-                        <p>
-                            <a href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
-                                View Project
-                            </a>
-                        </p>
+                <!-- Projects Section -->
+                <section>
+                    <h2>Projects</h2>
+                    <div class="projects-grid">
+                        <a class="project" href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
+                            <h3>Online Learning Management Web Application</h3>
+                            <img src="7.png" alt="Project 1" />
+                        </a>
+                        <a class="project" href="https://JZZhang04.github.io/620final.html" target="_blank">
+                            <h3>Heroin Overdose Analysis</h3>
+                            <img src="5.png" alt="Project 2" />
+                        </a>
+                        <a class="project" href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
+                            <h3>Predicting Heroin Overdoses</h3>
+                            <img src="1.png" alt="Project 3" />
+                        </a>
+                        <a class="project" href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                            <h3>Handwritten Digits Recognition</h3>
+                            <img src="6.png" alt="Project 4" />
+                        </a>
+                        <a class="project" href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                            <h3>Hotels of Miami</h3>
+                            <img src="3.png" alt="Project 5" />
+                        </a>
+                        <a class="project" href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
+                            <h3>Philadelphia Gunshot Map</h3>
+                            <img src="4.png" alt="Project 6" />
+                        </a>
                     </div>
-                    <div class="project">
-                        <h3>Heroin Overdose Analysis</h3>
-                        <img src="5.png" alt="Project 2" />
-                        <p>
-                            <a href="https://JZZhang04.github.io/620final.html" target="_blank">
-                                View Project
-                            </a>
-                        </p>
-                    </div>
-                    <div class="project">
-                        <h3>Predicting Heroin Overdoses</h3>
-                        <img src="1.png" alt="Project 3" />
-                        <p>
-                            <a href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
-                                View Project
-                            </a>
-                        </p>
-                    </div>
-                    <div class="project">
-                        <h3>Handwritten Digits Recognition</h3>
-                        <img src="6.png" alt="Project 4" />
-                        <p>
-                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
-                                View Project
-                            </a>
-                        </p>
-                    </div>
-                    <div class="project">
-                        <h3>Hotels of Miami</h3>
-                        <img src="3.png" alt="Project 5" />
-                        <p>
-                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
-                                View Project
-                            </a>
-                        </p>
-                    </div>
-                    <div class="project">
-                        <h3>Philadelphia Gunshot Map</h3>
-                        <img src="4.png" alt="Project 6" />
-                        <p>
-                            <a href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
-                                View Project
-                            </a>
-                        </p>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </div>
         </div>
     </div>
 </body>
