--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         .sidebar {
             background-color: #ffffff;
+            color: #000;
             padding: 20px;
             width: 25%;
             border-right: 1px solid #ddd;
