--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
             <!-- Left Sidebar -->
             <div class="sidebar">
                 <h1>Jiazuo Zhang</h1>
-                <p>Currently pursuing a degree in Computer Science. I possess expertise in creating user interfaces and refining software components. Proficient in JavaScript, React, and Angular, eager to apply skills for front end, full stack and map development.</p>
+                <p>Currently pursuing a degree in Computer Science. I possess expertise in creating user interfaces and refining software components. Proficient in JavaScript, React, and Angular, eager to apply skills for front end, full stack and map developments.</p>
+                </br>
                 <div class="contact-icons">
                     <a href="mailto:jiazuozhang04@gmail.com">
                         <i class="fas fa-envelope"></i> Email
@@ -132,11 +133,11 @@
                     <h2>Education</h2>
                     <div class="education">
                         <h3>Northeastern University</h3>
-                        <p>Master of Science in Computer Science 2024 - 2026</p>
+                        <p>Master of Science in Computer Science  2024 - 2026</p>
                         <h3>University of Pennsylvania</h3>
-                        <p>Master of Urban Spatial Analytics 2018 - 2019</p>
+                        <p>Master of Urban Spatial Analytics  2018 - 2019</p>
                         <h3>Beijing Forestry University</h3>
-                        <p>Bachelor of Engineering 2013 - 2018</p>
+                        <p>Bachelor of Engineering  2013 - 2018</p>
                     </div>
                 </section>
 
