--- a/index.html
+++ b/index.html
@@ -132,14 +132,24 @@
                 <section>
                     <h2>Education</h2>
                     <div class="education">
-                        <h3>Northeastern University</h3>
-                        <p>Master of Science in Computer Science  2024 - 2026</p>
-                        <h3>University of Pennsylvania</h3>
-                        <p>Master of Urban Spatial Analytics  2018 - 2019</p>
-                        <h3>Beijing Forestry University</h3>
-                        <p>Bachelor of Engineering  2013 - 2018</p>
+                        <div class="education-item">
+                            <img src="NU.png" alt="Northeastern University Logo" class="education-icon">
+                            <h3>Northeastern University</h3>
+                            <p>Master of Science in Computer Science  2024 - 2026</p>
+                        </div>
+                        <div class="education-item">
+                            <img src="UPenn.png" alt="University of Pennsylvania Logo" class="education-icon">
+                            <h3>University of Pennsylvania</h3>
+                            <p>Master of Urban Spatial Analytics  2018 - 2019</p>
+                        </div>
+                        <div class="education-item">
+                            <img src="BFU.jpeg" alt="Beijing Forestry University Logo" class="education-icon">
+                            <h3>Beijing Forestry University</h3>
+                            <p>Bachelor of Engineering  2013 - 2018</p>
+                        </div>
                     </div>
                 </section>
+            </br>
 
                 <!-- Professional Skills Section -->
                 <section>
@@ -151,6 +161,7 @@
                         <li><strong>Domain Knowledge:</strong> Object-Oriented Programming, Data Structures & Algorithms, Web Development</li>
                     </ul>
                 </section>
+            </br>
 
                 <!-- Projects Section -->
                 <section>
