--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <p>Master of Urban Spatial Analytics  2018 - 2019</p>
                         </div>
                         <div class="education-item">
-                            <img src="BFU.jpeg" alt="Beijing Forestry University Logo" class="education-icon">
+                            <img src="BFU.png" alt="Beijing Forestry University Logo" class="education-icon">
                             <h3>Beijing Forestry University</h3>
                             <p>Bachelor of Engineering  2013 - 2018</p>
                         </div>
