--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <!-- Professional Skills Section -->
                 <section>
                     <h2>Professional Skills</h2>
-                    <ul>
+                    <ul style="margin-bottom: 20px;">
                         <li><strong>Languages:</strong> Python, Java, JavaScript, TypeScript, HTML, CSS, R</li>
                         <li><strong>Frameworks & Libraries:</strong> React, Angular, Bootstrap, Leaflet, pandas</li>
                         <li><strong>Developer Tools:</strong> Git, Visual Studio Code, IntelliJ, Jupyter Notebook, MySQL Workbench, MongoDB</li>
@@ -167,30 +167,47 @@
                 <section>
                     <h2>Projects</h2>
                     <div class="projects-grid">
+
                         <a class="project" href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
                             <h3>Online Learning Management Web Application</h3>
                             <img src="7.png" alt="Project 1" />
                         </a>
+
+                        <a class="project"  target="_blank">
+                            <h3>Full Stack Apparel E-Commerce Website</h3>
+                            <img src="ecommerce.png" alt="Project 7" />
+                        </a>
+
+                        <a class="project"  target="_blank">
+                            <h3>Stock Investment Consulting Application</h3>
+                            <img src="botvestor.png" alt="Project 8" />
+                        </a>
+
                         <a class="project" href="https://JZZhang04.github.io/620final.html" target="_blank">
                             <h3>Heroin Overdose Analysis</h3>
                             <img src="5.png" alt="Project 2" />
                         </a>
+
                         <a class="project" href="https://JZZhang04.github.io/Project2_ver3" target="_blank">
                             <h3>Predicting Heroin Overdoses</h3>
                             <img src="1.png" alt="Project 3" />
                         </a>
+
                         <a class="project" href="https://JZZhang04.github.io/Handwritten_Digits-2.html" target="_blank">
                             <h3>Handwritten Digits Recognition</h3>
                             <img src="6.png" alt="Project 4" />
                         </a>
+
                         <a class="project" href="https://JZZhang04.github.io/cpln692-week7-midterm/assignment/index.html" target="_blank">
                             <h3>Hotels of Miami</h3>
                             <img src="3.png" alt="Project 5" />
                         </a>
+
                         <a class="project" href="https://JZZhang04.github.io/692_final/index.html" target="_blank">
                             <h3>Philadelphia Gunshot Map</h3>
                             <img src="4.png" alt="Project 6" />
                         </a>
+                        
                     </div>
                 </section>
             </div>
