--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- Left Sidebar -->
             <div class="sidebar">
                 <h1>Jiazuo Zhang</h1>
-                <p>Currently pursuing a degree in Computer Science. I possess expertise in creating user interfaces and refining software components. Proficient in JavaScript, React, and Angular, eager to apply skills for front end, full stack and map developments.</p>
+                <p>Currently pursuing a degree in Computer Science, I possess expertise in creating user interfaces and refining software components. Proficient in JavaScript, React, and Angular, eager to apply skills for front end, full stack and map developments.</p>
                 </br>
                 <div class="contact-icons">
                     <a href="mailto:jiazuozhang04@gmail.com">
@@ -154,7 +154,7 @@
                 <!-- Professional Skills Section -->
                 <section>
                     <h2>Professional Skills</h2>
-                    <ul style="margin-bottom: 20px;">
+                    <ul>
                         <li><strong>Languages:</strong> Python, Java, JavaScript, TypeScript, HTML, CSS, R</li>
                         <li><strong>Frameworks & Libraries:</strong> React, Angular, Bootstrap, Leaflet, pandas</li>
                         <li><strong>Developer Tools:</strong> Git, Visual Studio Code, IntelliJ, Jupyter Notebook, MySQL Workbench, MongoDB</li>
