--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
                         <a class="project" href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
                             <h3>Online Learning Management Web Application</h3>
-                            <img src="7.png" alt="Project 1" />
+                            <img src="kanbas.png" alt="Project 1" />
                         </a>
 
                         <a class="project"  target="_blank">
