--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
                         <a class="project"  target="_blank">
                             <h3>GiddyUpGPT: Arthur Morgan's Digital Ranch</h3>
-                            <img src="arthurmorgan.png" alt="Project 7" />
+                            <img src="Arthur.png" alt="Project 7" />
                         </a>
                         
                         <a class="project" href="https://a6--kanbas-react-web-cs5610-fa24.netlify.app/#/Kanbas" target="_blank">
